--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
+    "reactstrap": "^8.4.1",
     "use-position": "0.0.6"
   },
   "scripts": {
