--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
